test/good/generics/implicit04.px

func f() def
    return true

print f()
