test/bad/functions/print2.px

func f() def
    return

print f()
